examples/java/failing/annotations/Right.java
class MyClass {
        @JsonProperty("do_something")
        public void doSomething();
}
